add payout table

--- a/index.html
+++ b/index.html
@@ -5,10 +5,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jacks or Better</title>
     <link rel="stylesheet" href="styles.css" />
-
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    
+    <div class="container mx-auto">
+      <table class="border-separate border border-slate-500">
+        <tbody>
+          <tr>
+            <td class="border border-slate-500 px-1">
+              ROYAL FLUSH................
+            </td>
+            <td class="border border-slate-500 ps-8">250</td>
+            <td class="border border-slate-500 ps-8">500</td>
+            <td class="border border-slate-500 ps-8">750</td>
+            <td class="border border-slate-500 ps-8">1000</td>
+            <td class="border border-slate-500 ps-8">4000</td>
+          </tr>
+          <tr>
+            <td class="border border-slate-500 px-1">
+              STRAIGHT FLUSH..........
+            </td>
+            <td class="border border-slate-500 ps-8">50</td>
+            <td class="border border-slate-500 ps-8">100</td>
+            <td class="border border-slate-500 ps-8">150</td>
+            <td class="border border-slate-500 ps-8">200</td>
+            <td class="border border-slate-500 ps-8">250</td>
+          </tr>
+          <tr>
+            <td class="border border-slate-500 px-1">
+              FOUR OF A KIND............
+            </td>
+            <td class="border border-slate-500 ps-8">25</td>
+            <td class="border border-slate-500 ps-8">50</td>
+            <td class="border border-slate-500 ps-8">75</td>
+            <td class="border border-slate-500 ps-8">100</td>
+            <td class="border border-slate-500 ps-8">125</td>
+          </tr>
+          <tr>
+            <td class="border border-slate-500 px-1">
+              FULL HOUSE..................
+            </td>
+            <td class="border border-slate-500 ps-8">9</td>
+            <td class="border border-slate-500 ps-8">18</td>
+            <td class="border border-slate-500 ps-8">27</td>
+            <td class="border border-slate-500 ps-8">36</td>
+            <td class="border border-slate-500 ps-8">45</td>
+          </tr>
+          <tr>
+            <td class="border border-slate-500 px-1">
+              FLUSH............................
+            </td>
+            <td class="border border-slate-500 ps-8">6</td>
+            <td class="border border-slate-500 ps-8">12</td>
+            <td class="border border-slate-500 ps-8">18</td>
+            <td class="border border-slate-500 ps-8">24</td>
+            <td class="border border-slate-500 ps-8">30</td>
+          </tr>
+          <tr>
+            <td class="border border-slate-500 px-1">
+              STRAIGHT......................
+            </td>
+            <td class="border border-slate-500 ps-8">4</td>
+            <td class="border border-slate-500 ps-8">8</td>
+            <td class="border border-slate-500 ps-8">12</td>
+            <td class="border border-slate-500 ps-8">16</td>
+            <td class="border border-slate-500 ps-8">20</td>
+          </tr>
+          <tr>
+            <td class="border border-slate-500 px-1">
+              THREE OF A KIND..........
+            </td>
+            <td class="border border-slate-500 ps-8">3</td>
+            <td class="border border-slate-500 ps-8">6</td>
+            <td class="border border-slate-500 ps-8">9</td>
+            <td class="border border-slate-500 ps-8">12</td>
+            <td class="border border-slate-500 ps-8">15</td>
+          </tr>
+          <tr>
+            <td class="border border-slate-500 px-1">
+              TWO PAIR.......................
+            </td>
+            <td class="border border-slate-500 ps-8">2</td>
+            <td class="border border-slate-500 ps-8">4</td>
+            <td class="border border-slate-500 ps-8">6</td>
+            <td class="border border-slate-500 ps-8">8</td>
+            <td class="border border-slate-500 ps-8">10</td>
+          </tr>
+          <tr>
+            <td class="border border-slate-500 px-1">
+              JACKS OR BETTER........
+            </td>
+            <td class="border border-slate-500 ps-8">1</td>
+            <td class="border border-slate-500 ps-8">2</td>
+            <td class="border border-slate-500 ps-8">3</td>
+            <td class="border border-slate-500 ps-8">4</td>
+            <td class="border border-slate-500 ps-8">5</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </body>
   <script src="index.js"></script>
 </html>
