add dealFaceDown, dealFirstHand fn

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
         </tbody>
       </table>
     </div>
+
+    <div class="container flex flex-row card-container"></div>
   </body>
   <script src="index.js"></script>
 </html>
