--- a/index.html
+++ b/index.html
@@ -105,7 +105,16 @@
       </table>
     </div>
 
-    <div class="container flex flex-row card-container"></div>
+    <div class="container flex flex-row card-container">
+      <div class="card1"><img src="images/back.svg"></div>
+      <div class="card2"><img src="images/back.svg"></div>
+      <div class="card3"><img src="images/back.svg"></div>
+      <div class="card4"><img src="images/back.svg"></div>
+      <div class="card5"><img src="images/back.svg"></div>
+
+    </div>
+    <div class="container flex flex-row space-x-10">
+
   </body>
   <script src="index.js"></script>
 </html>
