add event listeners to card h1

--- a/index.html
+++ b/index.html
@@ -106,24 +106,24 @@
     </div>
 
     <div class="container flex flex-row card-container">
-      <div class="card1">
-        <h1 class="card1-status"></h1>
+      <div class="card card1">
+        <h1 class="card1-hold hideHold">HOLD</h1>
         <img class="card1-img" src="images/back.svg">
       </div>
-      <div class="card2">
-        <h1 class="card2-status"></h1>
+      <div class="card card2">
+        <h1 class="card2-hold hideHold">HOLD</h1>
         <img class="card2-img" src="images/back.svg">
       </div>
-      <div class="card3">
-        <h1 class="card3-status"></h1>
+      <div class="card card3">
+        <h1 class="card3-hold hideHold">HOLD</h1>
         <img class="card3-img" src="images/back.svg">
       </div>
-      <div class="card4">
-        <h1 class="card4-status"></h1>
+      <div class="card card4">
+        <h1 class="card4-hold hideHold">HOLD</h1>
         <img  class="card4-img" src="images/back.svg">
       </div>
-      <div class="card5">
-        <h1 class="card5-status"></h1>
+      <div class="card card5">
+        <h1 class="card5-hold hideHold">HOLD</h1>
         <img class="card5-img" src="images/back.svg">
       </div>
     </div>
